# bfc

./: .gitignore  README.md  meson.build
examples/: cat.bf  fibonacci.bf  hello.bf  rot13.bf
include/: aot_compiler.hpp  bf_types.hpp  codegen.hpp  driver.hpp  jit_compiler.hpp  lexer.hpp  optimizer.hpp  parser.hpp
src/: aot_compiler.cpp  codegen.cpp  driver.cpp  jit_compiler.cpp  lexer.cpp  main.cpp  optimizer.cpp  parser.cpp
tests/: meson.build  test_lexer.cpp  test_optimizer.cpp  test_parser.cpp
